@@ -10,6 +10,8 @@
 - Updated Chinese version of README
 - aider-pull-or-review-diff-file support pull changes for magit staged files, as default option
 - refactor the code review function since it has grown very large, with C-c a R (LLM suggest the refactoring strategy and I go ahead to accept it).
+- aider-pull-or-review-diff-file: add function to resolve branch refs for remote branch handling
+- aider-prompt-mode: improve robustness of snippet directory setup
 
 ** v0.8.4
 
